--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -21,6 +21,7 @@
 
 // Components
 @import 'components/appbar'; // Top menu bar (can be turned off)
+@import 'components/bottom-nav'; // Used to style the bottom navigation
 @import 'components/bottom-sheet'; // Used to style bottom sheet / modal (can be turned off)
 @import 'components/buttons'; // Used to style buttons (can be turned off)
 @import 'components/cards'; // Used to style cards (can be turned off)
