--- a/stylesheets/scss/components/_ripple.scss
+++ b/stylesheets/scss/components/_ripple.scss
@@ -5,7 +5,7 @@
  * http://codepen.io/patrickhill/pen/azwBdq/
  **************************************/
 
-.sm-hover-ripple {
+.sc-hover-ripple {
 	z-index: 1;
 	overflow: hidden;
 	position: relative;
@@ -56,7 +56,7 @@
 	}
 }
 
-.sm-ripple-effect{
+.sc-ripple-effect{
 	position: absolute;
 	border-radius: 50%;
 	width: 50px;
