--- a/stylesheets/scss/components/_sliders.scss
+++ b/stylesheets/scss/components/_sliders.scss
@@ -4,7 +4,7 @@
  * http://www.google.com/design/spec/components/sliders.html
  **************************************/
 
-input[type="range"].sm-slider {
+input[type="range"].sc-slider {
 	-webkit-appearance: none;
 	outline: none;
 	height: remCalc(2px);
