--- a/stylesheets/scss/components/_tooltips.scss
+++ b/stylesheets/scss/components/_tooltips.scss
@@ -4,7 +4,7 @@
  * http://www.google.com/design/spec/components/tooltips.html
  **************************************/
 
-.sm-tooltip {
+.sc-tooltip {
 	display: inline;
 	position: relative;
 
