--- a/stylesheets/scss/components/_grid.scss
+++ b/stylesheets/scss/components/_grid.scss
@@ -26,7 +26,7 @@ $xlarge-down: "only screen and (max-width: #{$xlarge-screen})";
 	$gutter: 24px;
 }
 
-.sm-container {
+.sc-container {
 	margin: 0 auto;
 	width: 90%;
 
@@ -49,7 +49,7 @@ $xlarge-down: "only screen and (max-width: #{$xlarge-screen})";
 	}
 }
 
-.sm-row {
+.sc-row {
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 20px;
@@ -61,7 +61,7 @@ $xlarge-down: "only screen and (max-width: #{$xlarge-screen})";
 		clear: both;
 	}
 
-	.sm-col {
+	.sc-col {
 		float: left;
 		@include box-sizing(border-box);
 		padding: 0 $gutter / 2;
@@ -78,7 +78,7 @@ $xlarge-down: "only screen and (max-width: #{$xlarge-screen})";
 		$i: 1;
 		@while $i <= $columns {
 			$percent: unquote( ( 100 / ( $columns / $i ) ) + "%" );
-			&.sm-s#{$i} {
+			&.sc-s#{$i} {
 				width: $percent;
 				margin-left: auto;
 				left: auto;
@@ -90,13 +90,13 @@ $xlarge-down: "only screen and (max-width: #{$xlarge-screen})";
 		$i: 1;
 		@while $i <= $columns {
 			$percent: unquote( ( 100 / ( $columns / $i ) ) + "%" );
-			&.sm-offset-s#{$i} {
+			&.sc-offset-s#{$i} {
 				margin-left: $percent;
 			}
-			&.sm-pull-s#{$i} {
+			&.sc-pull-s#{$i} {
 				right: $percent;
 			}
-			&.sm-push-s#{$i} {
+			&.sc-push-s#{$i} {
 				left: $percent;
 			}
 			$i: $i + 1;
@@ -107,7 +107,7 @@ $xlarge-down: "only screen and (max-width: #{$xlarge-screen})";
 			$i: 1;
 			@while $i <= $columns {
 				$percent: unquote( ( 100 / ( $columns / $i ) ) + "%" );
-				&.sm-m#{$i} {
+				&.sc-m#{$i} {
 					width: $percent;
 					margin-left: auto;
 					left: auto;
@@ -119,13 +119,13 @@ $xlarge-down: "only screen and (max-width: #{$xlarge-screen})";
 			$i: 1;
 			@while $i <= $columns {
 				$percent: unquote( ( 100 / ( $columns / $i ) ) + "%" );
-				&.sm-offset-m#{$i} {
+				&.sc-offset-m#{$i} {
 					margin-left: $percent;
 				}
-				&.sm-pull-m#{$i} {
+				&.sc-pull-m#{$i} {
 					right: $percent;
 				}
-				&.sm-push-m#{$i} {
+				&.sc-push-m#{$i} {
 					left: $percent;
 				}
 				$i: $i + 1;
@@ -136,7 +136,7 @@ $xlarge-down: "only screen and (max-width: #{$xlarge-screen})";
 			$i: 1;
 			@while $i <= $columns {
 				$percent: unquote( ( 100 / ( $columns / $i ) ) + "%" );
-				&.sm-l#{$i} {
+				&.sc-l#{$i} {
 					width: $percent;
 					margin-left: auto;
 					left: auto;
@@ -148,13 +148,13 @@ $xlarge-down: "only screen and (max-width: #{$xlarge-screen})";
 			$i: 1;
 			@while $i <= $columns {
 				$percent: unquote( ( 100 / ( $columns / $i ) ) + "%" );
-				&.sm-offset-l#{$i} {
+				&.sc-offset-l#{$i} {
 					margin-left: $percent;
 				}
-				&.sm-pull-l#{$i} {
+				&.sc-pull-l#{$i} {
 					right: $percent;
 				}
-				&.sm-push-l#{$i} {
+				&.sc-push-l#{$i} {
 					left: $percent;
 				}
 				$i: $i + 1;
